home/qbittorrent/deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: qbittorrent
  labels:
    app.kubernetes.io/name: qbittorrent
  annotations:
    avp.kubernetes.io/path: "kv/data/argocd"
    metallb.universe.tf/loadBalancerIPs: 192.168.30.230
    external-dns.alpha.kubernetes.io/hostname: torrent.homelab.local
spec:
  selector:
    app.kubernetes.io/name: qbittorrent
  type: LoadBalancer
  ports:
    - port: 80
      targetPort: webui
      name: webui
      protocol: TCP
    - port: 6881
      targetPort: torrent-tcp
      name: torrent-tcp
      protocol: TCP
    - port: 6881
      targetPort: torrent-udp
      name: torrent-udp
      protocol: UDP
    - port: 17871
      targetPort: metrics
      name: metrics
      protocol: TCP
    - port: 9117
      targetPort: jackett
      name: jackett
      protocol: TCP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: qbittorrent
  labels:
    app.kubernetes.io/name: qbittorrent
  annotations:
    avp.kubernetes.io/path: "kv/data/argocd"
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: qbittorrent
  template:
    metadata:
      labels:
        app.kubernetes.io/name: qbittorrent
    spec:
      automountServiceAccountToken: false
      restartPolicy: Always
      nodeSelector:
        node-role.kubernetes.io/nas: "nas"
      containers:
        - name: torrent
          image: linuxserver/qbittorrent:5.0.4
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
              protocol: TCP
              name: webui
            - containerPort: 6881
              protocol: TCP
              name: torrent-tcp
            - containerPort: 6881
              protocol: UDP
              name: torrent-udp
          volumeMounts:
            - mountPath: /cert
              name: tls-cert
            - mountPath: /downloads
              name: qbittorrent-data
            - mountPath: /config
              name: qbittorrent-config
        - name: exporter
          image: caseyscarborough/qbittorrent-exporter:v1.3.5
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 17871
              protocol: TCP
              name: metrics
      volumes:
        - name: qbittorrent-config
          persistentVolumeClaim:
            claimName: qbittorrent-config
        - name: qbittorrent-data
          persistentVolumeClaim:
            claimName: qbittorrent-data
        - name: tls-cert
          secret:
            secretName: torrent-server-tls
